--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+lib_deps = 
+	paulstoffregen/Time@^1.6.1
+	adafruit/RTClib@^2.1.4
+	adafruit/Adafruit BusIO@^1.16.1
